# super-prompt-canvas

./: .gitignore  .mailmap  BACKUP_INFO.md  CONTRIBUTORS.md  DATA_PERSISTENCE_FIX.md  DUAL_FACE_ALIGNMENT_GUIDE.md  FACE_TOOLS_README.md  FIX_SUMMARY.md  INSTALLATION.md  MANIFEST.in  README.md  __init__.py  __version__.py  guidance_library.js  pyproject.toml  requirements.txt  setup.py  simple_annotation.py  test_ollama_api.py  test_ollama_fixed.py
.git-rewrite/: backup-refs  commit  message  parse  raw-refs  revs
docs/: image_scaling_feature.md  quantized_lora_setup.md
examples/: flux_1_kontext_dev_basic .json  flux_1_kontext_dev_basic.json  kontext_super_prompt .json  kontext_super_prompt.json  kontext_visual_prompts.json
nodes/: API_flux_kontext_enhancer.py  annotation_data_node.py  background_removal_node.py  compound_operations_parser.py  config_manager.py  creative_reconstruction_engine.py  descriptive_creative_handler.py  enhanced_constraint_system.py  enhanced_prompt_analyzer.py  global_image_processor.py  guidance_manager.py  guidance_templates.py  intelligent_annotation_node.py  intelligent_constraint_generator.py  intelligent_prompt_analyzer.py  kontext_canvas.py  kontext_grammar_patterns.py  kontext_menu_config.py  kontext_super_prompt.py  layer_to_mask_node.py  local_ai_prompt_generator.py  new_operation_types_guidance.py  ollama_flux_kontext_enhancer.py  ollama_kontext_prompt_generator.py  ollama_model_converter.py  ollama_service_manager.py  rembg_api.py  sam2_comfyui_native_node.py  sam2_intelligent_annotation_node.py  sam2_loader_impact_style.py  sam2_universal_node.py  state_transformation_operations.py  technical_professional_operations.py  textgen_webui_flux_kontext_enhancer.py  visual_prompt_editor.py  visual_prompt_editor_debug.py
web/: API_flux_kontext_enhancer.js  KontextCanvasNode.js  KontextSuperPrompt.js  LocalAIPromptGenerator.js  OllamaServiceManager.js  api_key_manager.js  (+26 more)
(+49 files in other folders)
