[project]
name = "kontext-super-prompt"
description = "Intelligent Visual Prompt Builder for Flux Kontext - Advanced image editing, visual annotation recognition, and structured prompt generation"
version = "1.3.0"
license = { text = "MIT License" }
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.21.0",
    "pillow>=8.3.0",
    "opencv-python>=4.5.0",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0"
]

[project.urls]
Repository = "https://github.com/aiaiaikkk/kontext-super-prompt"

[tool.comfy]
PublisherId = "aiaiaikkk"
DisplayName = "kontext-super-prompt"
Icon = ""
