[project]
name = "super-prompt-canvas"
description = "ComfyUI nodes for image editing prompt generation with visual canvas annotation and multi-model AI assistance"
version = "1.4.2"
license = { text = "MIT License" }
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.21.0",
    "pillow>=8.3.0",
    "opencv-python>=4.5.0",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0"
]

[project.urls]
Repository = "https://github.com/aiaiaikkk/super-prompt-canvas"

[tool.comfy]
PublisherId = "aiaiaikkk"
DisplayName = "super-prompt-canvas"
Icon = ""
